--- a/.github/workflows/00-infra.yml
+++ b/.github/workflows/00-infra.yml
@@ -56,20 +56,20 @@ jobs:
       
       DNS_ZONE_NAME: ${{vars.DNS_ZONE_NAME}}
       PARENT_DNS_ZONE_NAME: ${{vars.PARENT_DNS_ZONE_NAME}}
-      PARENT_DNS_SUBSCRIPTION_ID: ${{VARS.PARENT_DNS_SUBSCRIPTION_ID}}
+      PARENT_DNS_SUBSCRIPTION_ID: ${{secrets.PARENT_DNS_SUBSCRIPTION_ID}}
       PARENT_DNS_ZONE_RESOURCE_GROUP: ${{vars.PARENT_DNS_ZONE_RESOURCE_GROUP}}
       PARENT_DNS_ZONE_TAGS: ${{vars.PARENT_DNS_ZONE_TAGS}}
       TODO_APP_DNS_RECORD_NAME: ${{vars.TODO_APP_DNS_RECORD_NAME}}
       PET_CLINIC_DNS_RECORD_NAME: ${{vars.PET_CLINIC_DNS_RECORD_NAME}}
       
-      SSL_CERT_KEYVAULT_SUBSCRIPTION_ID: ${{vars.SSL_CERT_KEYVAULT_SUBSCRIPTION_ID}}
+      SSL_CERT_KEYVAULT_SUBSCRIPTION_ID: ${{secrets.SSL_CERT_KEYVAULT_SUBSCRIPTION_ID}}
       SSL_CERT_KEYVAULT_RESOURCE_GROUP: ${{vars.SSL_CERT_KEYVAULT_RESOURCE_GROUP}}
       SSL_CERT_KEYVAULT_NAME: ${{vars.SSL_CERT_KEYVAULT_NAME}}
       SSL_CERT_KEYVAULT_TODO_CERT_SECRET_NAME: ${{vars.SSL_CERT_KEYVAULT_TODO_CERT_SECRET_NAME}}
       SSL_CERT_KEYVAULT_PETCLINIC_CERT_SECRET_NAME: ${{vars.SSL_CERT_KEYVAULT_PETCLINIC_CERT_SECRET_NAME}}
       
       PET_CLINIC_GIT_CONFIG_REPO_URI: ${{vars.PET_CLINIC_GIT_CONFIG_REPO_URI}}
-      PET_CLINIC_GIT_CONFIG_REPO_USERNAME: ${{vars.PET_CLINIC_GIT_CONFIG_REPO_USERNAME}}
+      PET_CLINIC_GIT_CONFIG_REPO_USERNAME: ${{secrets.PET_CLINIC_GIT_CONFIG_REPO_USERNAME}}
       PET_CLINIC_GIT_CONFIG_REPO_PASSWORD: ${{secrets.PET_CLINIC_GIT_CONFIG_REPO_PASSWORD}}
       
     steps:
