--- a/.github/workflows/71-continuous-integration-todo-app.yml
+++ b/.github/workflows/71-continuous-integration-todo-app.yml
@@ -26,6 +26,8 @@ jobs:
       JAVA_VERSION: 11
       DB: ${{vars.TODO_APP_DB_NAME}}
       USER_IDENTITY_NAME: ${{vars.AKS_NAME}}-todo-app-identity
+      AAD_CLIENT_ID: ${{secrets.AAD_CLIENT_ID}}
+      AAD_TENANT_ID: ${{secrets.AAD_TENANT_ID}}
       DB_USER_NAME: ${{vars.TODO_APP_DB_USER_NAME}}
       CONTAINER_REGISTRY_SUBSCRIPTION_ID: ${{secrets.CONTAINER_REGISTRY_SUBSCRIPTION_ID}}
       CONTAINER_REGISTRY_NAME: ${{vars.CONTAINER_REGISTRY_NAME}}
@@ -186,8 +188,8 @@ jobs:
     - name: Azure login in AKS Subscription # https://learn.microsoft.com/en-us/azure/developer/github/connect-from-azure
       uses: azure/login@v2
       with:
-        client-id: "${{secrets.AAD_CLIENT_ID}}"
-        tenant-id: "${{secrets.AAD_TENANT_ID}}"
+        client-id: "${{env.AAD_CLIENT_ID}}"
+        tenant-id: "${{env.AAD_TENANT_ID}}"
         subscription-id: "${{env.CONTAINER_REGISTRY_SUBSCRIPTION_ID}}"
 
     - name: Build a new container image
