--- a/.github/workflows/91-continuous-delivery-todo-app.yml
+++ b/.github/workflows/91-continuous-delivery-todo-app.yml
@@ -37,6 +37,7 @@ jobs:
       AKS_SUBSCRIPTION_ID: ${{secrets.AKS_SUBSCRIPTION_ID}}
       DNS_ZONE_NAME: ${{vars.DNS_ZONE_NAME}}
       PARENT_DNS_ZONE_NAME: ${{vars.PARENT_DNS_ZONE_NAME}}
+      DNS_RECORD_NAME: ${{vars.TODO_APP_DNS_RECORD_NAME}}
 
     # when called from another workflow directly, it inherits the event name from the caller workflow
     # (push in this case when called from 10-continuous-integration.yml)
@@ -206,7 +207,7 @@ jobs:
           DEPLOYMENT_SUFFIX: ""
           CONTAINER_IMAGE: ${{env.CONTAINER_REGISTRY_NAME}}.azurecr.io/${{env.ARTIFACT_NAME}}:${{steps.versions.outputs.VERSION}}
           RELEASE_DIR_NAME: ${{steps.versions.outputs.RELEASE_DIR_NAME}}
-          HOST_NAME: ${{vars.TODO_APP_DNS_RECORD_NAME}}.${{env.DNS_ZONE_NAME}}.${{env.PARENT_DNS_ZONE_NAME}}
+          HOST_NAME: ${{env.DNS_RECORD_NAME}}.${{env.DNS_ZONE_NAME}}.${{env.PARENT_DNS_ZONE_NAME}}
         run: |
           cat ./${{env.RELEASE_DIR_NAME}}/k8s/deployment.yml | CONTAINER_IMAGE=${{env.CONTAINER_IMAGE}} DEPLOYMENT_SUFFIX=${{env.DEPLOYMENT_SUFFIX}} HOST_NAME=${{env.HOST_NAME}} envsubst > ./deployment.yml.tmp
           cat ./deployment.yml.tmp
