--- a/todo-app/Dockerfile
+++ b/todo-app/Dockerfile
@@ -8,8 +8,9 @@ ENV PORT=80
 WORKDIR /
 
 ADD ./${ARTIFACT_NAME_ARG}-${VERSION_ARG}.jar /${ARTIFACT_NAME_ARG}-${VERSION_ARG}.jar
-ADD ./ai.jar /ai.jar
+# ADD ./ai.jar /ai.jar
 
 EXPOSE 80 443
 
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-javaagent:/ai.jar","-jar","/${ARTIFACT_NAME_ARG}-${VERSION_ARG}.jar"]
+# ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-javaagent:/ai.jar","-jar","/${ARTIFACT_NAME_ARG}-${VERSION_ARG}.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/${ARTIFACT_NAME_ARG}-${VERSION_ARG}.jar"]
