--- a/scripts/deployment/test-agic.yml
+++ b/scripts/deployment/test-agic.yml
@@ -1,21 +1,36 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: test-agic-app-pod
   labels:
     app: test-agic-app
+  name: test-agic-app
 spec:
-  containers:
-  - image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
-    name: aspnetapp-image
-    ports:
-    - containerPort: 80
-      protocol: TCP
+  replicas: 1
+  selector:
+    matchLabels:
+      app: test-agic-app
+  template:
+    metadata:
+      labels:
+        app: test-agic-app
+    spec:
+      containers:
+      - image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
+        name: test-agic-app-service
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
+          name: http
+          protocol: TCP
+        securityContext:
+          privileged: false
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-agic-app-service
+  name: test-agic-app
 spec:
   selector:
     app: test-agic-app
@@ -23,20 +38,30 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
+
 ---
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: test-agic-app-ingress
+  name: test-agic-app
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
+    appgw.ingress.kubernetes.io/appgw-ssl-certificate: appGatewaySslCertPetClinic
+    appgw.ingress.kubernetes.io/request-timeout: "90"
+    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
+    appgw.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  ingressClassName: azure-application-gateway
   rules:
-    - host: test.agic.contoso.com
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: test-agic-app-service
-              servicePort: 80
+  - host: $HOST_NAME
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: test-agic-app
+            port:
+              number: 80
+        pathType: Exact
