Switched PathType from Exact to Prefix for AGIC Ingress

--- a/docker/grafana/k8s/deployment.yml
+++ b/docker/grafana/k8s/deployment.yml
@@ -85,4 +85,4 @@ spec:
             name: grafana-server
             port:
               number: 80
-        pathType: Exact
+        pathType: Prefix
