--- a/docker/zipkin/k8s/deployment.yml
+++ b/docker/zipkin/k8s/deployment.yml
@@ -122,4 +122,4 @@ spec:
             name: tracing-server
             port:
               number: 80
-        pathType: Exact
+        pathType: Prefix
