--- a/spring-petclinic-admin-server/k8s/deployment.yml
+++ b/spring-petclinic-admin-server/k8s/deployment.yml
@@ -128,4 +128,4 @@ spec:
             name: admin-server
             port:
               number: 80
-        pathType: Exact
+        pathType: Prefix
