--- a/spring-petclinic-api-gateway/src/main/resources/application.yml
+++ b/spring-petclinic-api-gateway/src/main/resources/application.yml
@@ -10,7 +10,6 @@ spring:
       routes:
         - id: vets-service
           uri: http://vets-service:8080
-          #  http://vets-service.pet-clinic:8083
           predicates:
             - Path=/api/vet/**
           filters:
@@ -27,15 +26,15 @@ spring:
             - Path=/api/customer/**
           filters:
             - StripPrefix=2
-        - id: gateway-owners-service
-          uri: http://customers-service:8080
-          predicates:
-            - Path=/api/gateway/owners/**
-          filters:
-            - StripPrefix=2
-        - id: owners-service
-          uri: http://customers-service:8080
-          predicates:
-            - Path=/api/owners/**
-          filters:
-            - StripPrefix=1
+        # - id: gateway-owners-service
+        #   uri: http://customers-service:8080
+        #   predicates:
+        #     - Path=/api/gateway/owners/**
+        #   filters:
+        #     - StripPrefix=2
+        # - id: owners-service
+        #   uri: http://customers-service:8080
+        #   predicates:
+        #     - Path=/api/owners/**
+        #   filters:
+        #     - StripPrefix=1
